# PEFT-Study

./: .gitignore  my_lora_model.py  pyproject.toml  test.py
tuning_practice/: chatbot_bitfit.ipynb  chatbot_ia3.ipynb  chatbot_prefix_tuning.ipynb  chatbot_prompt_tuning.ipynb  chatbot_ptuning.ipynb  peft_advanced_operation.ipynb
tuning_practice/chatbot/checkpoint-300/: README.md  adapter_config.json  tokenizer.json  trainer_state.json
tuning_practice/chatbot/checkpoint-40/: adapter_config.json  trainer_state.json
tuning_practice/chatbot/checkpoint-500/: config.json  generation_config.json  model.safetensors.index.json  trainer_state.json
tuning_practice/chatbot/checkpoint-60/: trainer_state.json
tuning_practice/chatbot/checkpoint-80/: trainer_state.json
tuning_practice/chatbot/merge_model/: config.json
tuning_practice/chatbot_prefix/checkpoint-100/: README.md  adapter_config.json  trainer_state.json
tuning_practice/loraA/: adapter_config.json
tuning_practice/loraB/: adapter_config.json
tuning_practice/lora_tuning/: chatbot_lora.ipynb  inference.ipynb
tuning_practice/manual_save_result/: adapter_config.json
