[project]
name = "peft-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.4.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "notebook>=7.5.0",
    "peft==0.18.0",
    "python-dotenv>=1.2.1",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.57.1",
]
